Refactor Claim and Validation Logic for Mixed Path Components